--- a/assets/css/shire.css
+++ b/assets/css/shire.css
@@ -86,6 +86,30 @@ p{
 .block.app-block-intro {
     background: url('../../assets/img/clouds-field-grass-53414-bw.jpg') 0% 0% / cover fixed;
 }
+.panel-icon {
+    box-shadow: 0 20px 20px 2px rgba(0, 0, 0, 0.55);
+    border-color: #72A541;
+}
+.panel-icon .panel-heading {
+    background-color: #72A541;
+}
+.panel-icon .card-icon {
+    background-color: #ffffff;
+    border-radius: 50%;
+    height: 10rem;
+    width: 10rem;
+    margin: -6.5rem auto 0;
+    border: 4px solid #000000;
+    text-align: center;
+}
+.panel-icon .card-icon .icon {
+    font-size: 6rem;
+    color: #72A541;
+}
+.panel-icon .panel-heading h4 {
+    color: #ffffff;
+    font-weight: 500;
+}
 /**** END new dev work 2018-05-08 ****/
 
 @media (max-width: 992px) {
