--- a/assets/css/shire.css
+++ b/assets/css/shire.css
@@ -86,9 +86,13 @@ p{
 .block.app-block-intro {
     background: url('../../assets/img/clouds-field-grass-53414-bw.jpg') 0% 0% / cover fixed;
 }
+.block.app-block-services {
+    background: url('../../assets/img/clouds-countryside-dawn-910411-bw.jpg') 0% 0% / cover fixed;
+}
 .panel-icon {
     box-shadow: 0 20px 20px 2px rgba(0, 0, 0, 0.55);
     border-color: #72A541;
+    margin: 0 0 80px;
 }
 .panel-icon .panel-heading {
     background-color: #72A541;
@@ -109,6 +113,14 @@ p{
 .panel-icon .panel-heading h4 {
     color: #ffffff;
     font-weight: 500;
+}
+.panel-icon .iconlist .icon {
+    color: #72A541;
+}
+@media (min-width: 1200px) {
+    .panel-icon {
+        margin: 0 20px 80px;
+    }
 }
 /**** END new dev work 2018-05-08 ****/
 
