--- a/assets/css/shire.css
+++ b/assets/css/shire.css
@@ -42,15 +42,16 @@
 #founder img{
     padding: 5px;
     border: 1px solid #d3d3d3;
-    display: inline-block;
-    margin-right: 20px;
-    float: right;
+    margin: 10px auto 20px;
+    /* display: inline-block; */
+    /* margin-right: 20px; */
+    /* float: right; */
 }
-@media (max-width: 992px) {
+@media (min-width: 992px) {
     #founder img {
-        display: block;
-        float: none;
-        margin: 0 auto 15px auto;
+        /* display: block;
+        float: none; */
+        margin: 0 auto;
     }
 }
 #founder h3{
@@ -88,6 +89,9 @@ p{
 }
 .block.app-block-services {
     background: url('../../assets/img/clouds-countryside-dawn-910411-bw.jpg') 0% 0% / cover fixed;
+}
+.block.app-block-founder {
+    background: url('../../assets/img/bloom-blossom-field-109260-bw.jpg') 0% 0% / cover fixed;
 }
 .panel-icon {
     box-shadow: 0 20px 20px 2px rgba(0, 0, 0, 0.55);
@@ -157,6 +161,11 @@ p{
 }
 .carousel-indicators {
     bottom: -50px;
+}
+.panel-founder {
+    box-shadow: 0 20px 20px 2px rgba(0, 0, 0, 0.55);
+    border-color: #72A541;
+    margin: 0;
 }
 /**** END new dev work 2018-05-08 ****/
 
